--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<maven.version>3.9.4</maven.version>
 	</properties>
 	<dependencies>
 		<dependency>
